[metadata]
name = ColorPrinter
version = 1.0.0
author = Kaloian Kozlev
author_email = kbkozlev@gmail.com
description = Used for printing to the CLI in different colors and styles
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kbkozlev/ColorPrinter
project_urls =
    Bug Tracker = package issues url
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = ColorPrinter
packages = find:
python_requires = >=3.6
